@@ -18,6 +18,7 @@ import java.util.Date;
 import java.util.List;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import org.apache.log4j.Logger;
 import org.apache.struts.action.ActionForm;
 import org.apache.struts.action.ActionForward;
 import org.apache.struts.action.ActionMapping;
@@ -37,6 +38,8 @@ public class ManageGroupAction extends DispatchAction {
     /* forward name="success" path="" */
     private static final String SUCCESS = "success";
     private static final String EDIT = "edit";
+    private static final Logger logger = Logger.getLogger(ManageGroupAction.class);
+
     /**
      * This is the action called from the Struts framework.
      *
@@ -47,339 +50,343 @@ public class ManageGroupAction extends DispatchAction {
      * @throws java.lang.Exception
      * @return
      */
-    
     public ActionForward insertGroup(ActionMapping mapping, ActionForm form,
             HttpServletRequest request, HttpServletResponse response)
             throws Exception {
-        
-        
-        request.getSession().setAttribute("userName", "Jyot");
-        request.getSession().setAttribute("userId", new Integer(1));
-        System.out.println("INSIDE execute method Of Manage Group Action...");
-        System.out.println(request.getParameter("groupName"));
-        System.out.println(request.getParameter("groupDesc"));
-        System.out.println(request.getSession().getAttribute("userName"));
-        System.out.println(request.getSession().getAttribute("userId"));
-        AssignmentForm assignmentForm = (AssignmentForm) form;
-    
-        String groupName=request.getParameter("groupName");
-        String groupDesc=request.getParameter("groupDesc");
-        Integer userId = (Integer) request.getSession().getAttribute("userId");
-        int success_id=insertGroupHandler(new AssgGroupMst(userId, groupName, groupDesc, userId,0));
-        System.out.println("ID generated is...+++"+success_id);
-        assignmentForm.setGroupList(getGroupListHandler(request)); // get groups again....
+
+        try {
+            request.getSession().setAttribute("userName", "Jyot");
+            request.getSession().setAttribute("userId", new Integer(1));
+            logger.info("INSIDE execute method Of Manage Group Action...");
+            logger.info(request.getParameter("groupName"));
+            logger.info(request.getParameter("groupDesc"));
+            logger.info(request.getSession().getAttribute("userName"));
+            logger.info(request.getSession().getAttribute("userId"));
+            AssignmentForm assignmentForm = (AssignmentForm) form;
+
+            String groupName = request.getParameter("groupName");
+            String groupDesc = request.getParameter("groupDesc");
+            Integer userId = (Integer) request.getSession().getAttribute("userId");
+            int success_id = insertGroupHandler(new AssgGroupMst(userId, groupName, groupDesc, userId, 0));
+            logger.info("ID generated is...+++" + success_id);
+            assignmentForm.setGroupList(getGroupListHandler(request)); // get groups again....
+        } catch (Exception e) {
+            logger.error("Error while inserting group : " + e, e);
+        }
         return mapping.findForward(SUCCESS);
-        
-        
+
+
     }
-    
-    
-     private int insertGroupHandler(AssgGroupMst agm) {
-        
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
-        
-        Transaction tx=null;
-    
-        try{
-        tx=session.beginTransaction();
-        //session.save(pad);
-        //session.save(user);
-        session.save(agm);
-        System.out.println("PAD ID is +++ "+agm.getAssgGroupId());
-        tx.commit();
-        session.close();
-        return agm.getAssgGroupId();
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        return -1;
+
+    private int insertGroupHandler(AssgGroupMst agm) {
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
+
+        Transaction tx = null;
+
+        try {
+            tx = session.beginTransaction();
+            //session.save(pad);
+            //session.save(user);
+            session.save(agm);
+            System.out.println("PAD ID is +++ " + agm.getAssgGroupId());
+            tx.commit();
+            session.close();
+            return agm.getAssgGroupId();
+        } catch (Exception ex) {
+            logger.error("Error while inserting group : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+            return -1;
         }
     }
-    
-    
-    
+
     public ActionForward getGroupList(ActionMapping mapping, ActionForm form,
             HttpServletRequest request, HttpServletResponse response)
             throws Exception {
-      
-     // Getting Groups from Database...   
-      AssignmentForm assgForm = (AssignmentForm) form;
-        
-      assgForm.setGroupList(getGroupListHandler(request));  
-      
-      System.out.println("Group Sixze is :::: "+assgForm.getGroupList().size());
-      return mapping.findForward(SUCCESS);
-        
-        
+        try {
+            // Getting Groups from Database...   
+            AssignmentForm assgForm = (AssignmentForm) form;
+
+            assgForm.setGroupList(getGroupListHandler(request));
+
+            logger.info("Group Sixze is :::: " + assgForm.getGroupList().size());
+
+        } catch (Exception e) {
+            logger.error("Error in getGroupList method : " + e, e);
+        }
+        return mapping.findForward(SUCCESS);
     }
-    
-    
-        private List<AssgGroupMst> getGroupListHandler(HttpServletRequest request) {
-        
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
-        
-        Transaction tx=null;
-    // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
-        try{
-        tx=session.beginTransaction();
-        Query q_groupList=session.createQuery("from AssgGroupMst C where C.assgGroupIdHide = 0 " );
-        List<AssgGroupMst> groupList =new ArrayList<AssgGroupMst>(); 
-        groupList=(ArrayList<AssgGroupMst>) q_groupList.list();
-       // request.setAttribute("chatRoomList", chatRoomList);         ------------------++++
-        System.out.println("Group List Size is:: "+groupList.size());
-        tx.commit();
-        session.close();
-        return groupList;
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        
+
+    private List<AssgGroupMst> getGroupListHandler(HttpServletRequest request) {
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
+
+        Transaction tx = null;
+        // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
+        try {
+            tx = session.beginTransaction();
+            Query q_groupList = session.createQuery("from AssgGroupMst C where C.assgGroupIdHide = 0 ");
+            List<AssgGroupMst> groupList = new ArrayList<AssgGroupMst>();
+            groupList = (ArrayList<AssgGroupMst>) q_groupList.list();
+            // request.setAttribute("chatRoomList", chatRoomList);         ------------------++++
+            logger.info("Group List Size is:: " + groupList.size());
+            tx.commit();
+            session.close();
+            return groupList;
+        } catch (Exception ex) {
+            logger.error("Error in getGroupListHandler method : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+
         }
         return null;
-        
+
     }
-        
+
     // Below method is always used for Editing the Particular Group with input ID and Name available to method as request params.
-        
     public ActionForward editGroup(ActionMapping mapping, ActionForm form,
             HttpServletRequest request, HttpServletResponse response)
             throws Exception {
-        
-        
-        request.getSession().setAttribute("userName", "Jyot");
-        request.getSession().setAttribute("userId", new Integer(1));
-        System.out.println("INSIDE Edit GROUP method Of Manage Group Action...");
-        System.out.println(request.getParameter("groupId"));
-        System.out.println(request.getParameter("groupName"));
-        System.out.println("Username :"+request.getSession().getAttribute("userName"));
-        System.out.println("UserID   :"+request.getSession().getAttribute("userId"));
-        AssignmentForm assignmentForm = (AssignmentForm) form;
-        
-        String groupName=request.getParameter("groupName");
-        String groupId=request.getParameter("groupId");
-        Integer userId = (Integer) request.getSession().getAttribute("userId");
-        assignmentForm.setGroupId(Integer.valueOf(groupId));
-        assignmentForm.setGroupName(groupName);
-        
-        List <AssgGroupUser> userList = new ArrayList<AssgGroupUser>();
-    
-        
-        assignmentForm.setUserList(getOutsideUserList(request));
-        assignmentForm.setRemoveUserList(getInsideUserList(request));
-        
-        
+
+        try {
+            request.getSession().setAttribute("userName", "Jyot");
+            request.getSession().setAttribute("userId", new Integer(1));
+            logger.info("INSIDE Edit GROUP method Of Manage Group Action...");
+            logger.info(request.getParameter("groupId"));
+            logger.info(request.getParameter("groupName"));
+            logger.info("Username :" + request.getSession().getAttribute("userName"));
+            logger.info("UserID   :" + request.getSession().getAttribute("userId"));
+            AssignmentForm assignmentForm = (AssignmentForm) form;
+
+            String groupName = request.getParameter("groupName");
+            String groupId = request.getParameter("groupId");
+            Integer userId = (Integer) request.getSession().getAttribute("userId");
+            assignmentForm.setGroupId(Integer.valueOf(groupId));
+            assignmentForm.setGroupName(groupName);
+
+            List<AssgGroupUser> userList = new ArrayList<AssgGroupUser>();
+
+
+            assignmentForm.setUserList(getOutsideUserList(request));
+            assignmentForm.setRemoveUserList(getInsideUserList(request));
+        } catch (Exception e) {
+            logger.error("Error in editGroup method : " + e, e);
+        }
         return mapping.findForward(EDIT);
-        
-        
-    }        
-    
+
+
+    }
+
     public ActionForward deleteGroup(ActionMapping mapping, ActionForm form,
             HttpServletRequest request, HttpServletResponse response)
             throws Exception {
-    AssgGroupMst agm = new AssgGroupMst();
-    agm.setAssgGroupId(Integer.valueOf(request.getParameter("groupId")));
-    agm.setAssgGroupIdHide(1);
-    int deleteResult=deleteGroupById(agm);  
-      AssignmentForm assgForm = (AssignmentForm) form;
-        
-      assgForm.setGroupList(getGroupListHandler(request));  
-      
-      System.out.println("Group Sixze is :::: "+assgForm.getGroupList().size());
+        try {
+            AssgGroupMst agm = new AssgGroupMst();
+            agm.setAssgGroupId(Integer.valueOf(request.getParameter("groupId")));
+            agm.setAssgGroupIdHide(1);
+            int deleteResult = deleteGroupById(agm);
+            AssignmentForm assgForm = (AssignmentForm) form;
 
-      return mapping.findForward(SUCCESS);
-       
+            assgForm.setGroupList(getGroupListHandler(request));
+
+            logger.info("Group Sixze is :::: " + assgForm.getGroupList().size());
+        } catch (Exception e) {
+            logger.error("Error in deleteGroup method : " + e, e);
+        }
+        return mapping.findForward(SUCCESS);
+
     }
-    
+
     private int deleteGroupById(AssgGroupMst agm) {
-        
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
-        
-        Transaction tx=null;
-    
-        try{
-        tx=session.beginTransaction();
-        //session.save(pad);
-        //session.save(user);
-        AssgGroupMst agmUpdate = (AssgGroupMst) session.load(AssgGroupMst.class,agm.getAssgGroupId());
-        agmUpdate.setAssgGroupIdHide(1);
-        session.save(agmUpdate);
-        System.out.println("HIDE FLAG is +++ "+agm.getAssgGroupIdHide());
-        tx.commit();
-        session.close();
-        return 1;
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        return -1;
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
+
+        Transaction tx = null;
+
+        try {
+            tx = session.beginTransaction();
+            //session.save(pad);
+            //session.save(user);
+            AssgGroupMst agmUpdate = (AssgGroupMst) session.load(AssgGroupMst.class, agm.getAssgGroupId());
+            agmUpdate.setAssgGroupIdHide(1);
+            session.save(agmUpdate);
+            System.out.println("HIDE FLAG is +++ " + agm.getAssgGroupIdHide());
+            tx.commit();
+            session.close();
+            return 1;
+        } catch (Exception ex) {
+            logger.error("Error in deleteGroupById method : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+            return -1;
         }
-    }
-    
-    
-    
-        
-     private List<ChatUser> getOutsideUserList( HttpServletRequest request) {
-    
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
-        
-        Transaction tx=null;
-    // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
-        try{
-        tx=session.beginTransaction();
-        StringBuilder query = new StringBuilder();
-        query.append("SELECT CU.* FROM  chat_user CU where CU.chat_User_Id not in ");
-        query.append(" (SELECT distinct assg_user_id FROM assg_group_user agu  ");
-        query.append(" where agu.assg_group_id = "+request.getParameter("groupId") +")");
-        System.out.println(query.toString());
-        SQLQuery q_userList=session.createSQLQuery(query.toString());
-        q_userList.addEntity(ChatUser.class);
-        
-        List<ChatUser> userList = new ArrayList<ChatUser>();
-        userList=(ArrayList<ChatUser>) q_userList.list();
-        
-        System.out.println("UserList Size is : "+ userList.size());
-        tx.commit();
-        session.close();
-        return userList;
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        
-        }
-        return null;
-        
-    }
-     
-     private List<ChatUser> getInsideUserList( HttpServletRequest request) {
-    
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
-        
-        Transaction tx=null;
-    // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
-        try{
-        tx=session.beginTransaction();
-        StringBuilder query = new StringBuilder();
-        query.append("SELECT AGU.assg_usergroup_id chat_user_id,CU.chat_user_name,CU.chat_user_desc,CU.chat_user_image,CU.chat_user_votes ");
-        query.append("FROM  chat_user CU,assg_group_user AGU ");
-        query.append("where AGU.assg_user_id=CU.chat_user_id and AGU.assg_group_id="+request.getParameter("groupId") +" and CU.chat_User_Id in ");
-        query.append("(SELECT distinct assg_user_id FROM assg_group_user where assg_group_id="+request.getParameter("groupId")+")");
-        System.out.println(query.toString());
-        SQLQuery q_userList=session.createSQLQuery(query.toString());
-        q_userList.addEntity(ChatUser.class);
-        
-        List<ChatUser> userList = new ArrayList<ChatUser>();
-        userList=(ArrayList<ChatUser>) q_userList.list();
-        
-        System.out.println("UserList Size is : "+ userList.size());
-        tx.commit();
-        session.close();
-        return userList;
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        
-        }
-        return null;
-        
     }
 
-     
-     
-     
-     public ActionForward editUserList(ActionMapping mapping, ActionForm form,
+    private List<ChatUser> getOutsideUserList(HttpServletRequest request) {
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
+
+        Transaction tx = null;
+        // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
+        try {
+            tx = session.beginTransaction();
+            StringBuilder query = new StringBuilder();
+            query.append("SELECT CU.* FROM  chat_user CU where CU.chat_User_Id not in ");
+            query.append(" (SELECT distinct assg_user_id FROM assg_group_user agu  ");
+            query.append(" where agu.assg_group_id = " + request.getParameter("groupId") + ")");
+            System.out.println(query.toString());
+            SQLQuery q_userList = session.createSQLQuery(query.toString());
+            q_userList.addEntity(ChatUser.class);
+
+            List<ChatUser> userList = new ArrayList<ChatUser>();
+            userList = (ArrayList<ChatUser>) q_userList.list();
+
+            System.out.println("UserList Size is : " + userList.size());
+            tx.commit();
+            session.close();
+            return userList;
+        } catch (Exception ex) {
+            logger.error("Error in getOutsideUserList method : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+
+        }
+        return null;
+
+    }
+
+    private List<ChatUser> getInsideUserList(HttpServletRequest request) {
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
+
+        Transaction tx = null;
+        // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
+        try {
+            tx = session.beginTransaction();
+            StringBuilder query = new StringBuilder();
+            query.append("SELECT AGU.assg_usergroup_id chat_user_id,CU.chat_user_name,CU.chat_user_desc,CU.chat_user_image,CU.chat_user_votes ");
+            query.append("FROM  chat_user CU,assg_group_user AGU ");
+            query.append("where AGU.assg_user_id=CU.chat_user_id and AGU.assg_group_id=" + request.getParameter("groupId") + " and CU.chat_User_Id in ");
+            query.append("(SELECT distinct assg_user_id FROM assg_group_user where assg_group_id=" + request.getParameter("groupId") + ")");
+            logger.info(query.toString());
+            SQLQuery q_userList = session.createSQLQuery(query.toString());
+            q_userList.addEntity(ChatUser.class);
+
+            List<ChatUser> userList = new ArrayList<ChatUser>();
+            userList = (ArrayList<ChatUser>) q_userList.list();
+
+            logger.info("UserList Size is : " + userList.size());
+            tx.commit();
+            session.close();
+            return userList;
+        } catch (Exception ex) {
+            logger.error("Error in getInsideUserList method : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+
+        }
+        return null;
+
+    }
+
+    public ActionForward editUserList(ActionMapping mapping, ActionForm form,
             HttpServletRequest request, HttpServletResponse response)
             throws Exception {
-        
-        
-        System.out.println("INSIDE Edit USERLIST method Of Manage Group Action...");
-        
-        AssignmentForm assignmentForm = (AssignmentForm) form;
-        
+
+        try {
+            logger.info("INSIDE Edit USERLIST method Of Manage Group Action...");
+
+            AssignmentForm assignmentForm = (AssignmentForm) form;
+
 //        System.out.println("Class Of Checkboxxxs.."+request.getParameterValues("selectedUsers").getClass().getName());
 //        System.out.println(Arrays.toString(request.getParameterValues("selectedUsers")));
-        String[] selectedUserIds = request.getParameterValues("selectedUsers");
-        String[] deselectedUserIds = request.getParameterValues("deselectedUsers");
-        int groupId = Integer.valueOf(request.getParameter("groupId"));
-        System.out.println("Group ID retrieved is : "+groupId);
-        
-        if(selectedUserIds != null){
-        updateUserList(groupId,selectedUserIds);
-        }
-        if(deselectedUserIds != null){
-        updateDeUserList(groupId,deselectedUserIds);
-        }
-     
-        assignmentForm.setUserList(getOutsideUserList(request));
-        assignmentForm.setRemoveUserList(getInsideUserList(request));
+            String[] selectedUserIds = request.getParameterValues("selectedUsers");
+            String[] deselectedUserIds = request.getParameterValues("deselectedUsers");
+            int groupId = Integer.valueOf(request.getParameter("groupId"));
+            logger.info("Group ID retrieved is : " + groupId);
 
+            if (selectedUserIds != null) {
+                updateUserList(groupId, selectedUserIds);
+            }
+            if (deselectedUserIds != null) {
+                updateDeUserList(groupId, deselectedUserIds);
+            }
+
+            assignmentForm.setUserList(getOutsideUserList(request));
+            assignmentForm.setRemoveUserList(getInsideUserList(request));
+        } catch (Exception e) {
+            logger.error("Error in editUserList method : " + e, e);
+        }
         return mapping.findForward(EDIT);
-        
-    }    
-     
-    void updateUserList(int groupId, String[] selectedUserIds) {
-        
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
-        
-        Transaction tx=null;
-    // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
-        try{
-        tx=session.beginTransaction();
-        //session.save(pad);
-        //session.save(user);
-        for(String s:selectedUserIds)
-        {
-            session.saveOrUpdate(new AssgGroupUser(groupId, Integer.valueOf(s)));
-        }
-        tx.commit();
-        session.close();
-        
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        
-        }
-        
+
     }
-     
-     void updateDeUserList(int groupId, String[] deselectedUserIds) {
-        
-        SessionFactory factory=HibernateUtil.getSessionFactory();
-        Session session=factory.openSession();    
+
+    void updateUserList(int groupId, String[] selectedUserIds) {
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
+
+        Transaction tx = null;
+        // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
+        try {
+            tx = session.beginTransaction();
+            //session.save(pad);
+            //session.save(user);
+            for (String s : selectedUserIds) {
+                session.saveOrUpdate(new AssgGroupUser(groupId, Integer.valueOf(s)));
+            }
+            tx.commit();
+            session.close();
+
+        } catch (Exception ex) {
+            logger.error("Error in updateUserList method : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+
+        }
+
+    }
+
+    void updateDeUserList(int groupId, String[] deselectedUserIds) {
+
+        SessionFactory factory = HibernateUtil.getSessionFactory();
+        Session session = factory.openSession();
         System.out.println("Indise update DeUSER List method...");
-        Transaction tx=null;
-    // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
-        try{
-        tx=session.beginTransaction();
-        //session.save(pad);
-        //session.save(user);
-        for(String s:deselectedUserIds)
-        {
-        AssgGroupUser a = new AssgGroupUser();
-        a.setAssgUsergroupId(Integer.valueOf(s));
-        session.delete(a);
+        Transaction tx = null;
+        // Insert message with Pad ID 1 and User Id Generated by JavaScript ex.1
+        try {
+            tx = session.beginTransaction();
+            //session.save(pad);
+            //session.save(user);
+            for (String s : deselectedUserIds) {
+                AssgGroupUser a = new AssgGroupUser();
+                a.setAssgUsergroupId(Integer.valueOf(s));
+                session.delete(a);
+            }
+
+
+            tx.commit();
+            session.close();
+
+        } catch (Exception ex) {
+            logger.error("Error in updateDeUserList method : " + ex, ex);
+            tx.rollback();
+            session.close();
+            ex.printStackTrace();
+
         }
-        
-        
-        tx.commit();
-        session.close();
-        
-        }catch(Exception ex){
-        tx.rollback();
-        session.close();
-        ex.printStackTrace();
-        
-        }
-        
+
     }
 }
